Remove dependency with vulnerable library py - upgrade to tox>=4.13
All existing version from the py library are affected by the
following vulnerability:
https://github.com/advisories/GHSA-w596-4wvx-j9j6

In order to stop using py, its reference has been removed from tobiko
requirements. Besides, tox and pytest libraries versions have been
upgraded for this.

Change-Id: I2c61e753e55340b19ab941fd532de0cab875d51c

--- a/roles/tobiko-ensure-tox/tasks/tox.yaml
+++ b/roles/tobiko-ensure-tox/tasks/tox.yaml
@@ -2,7 +2,8 @@
 
 - name: "ensure Tox is installed"
   command: >
-    {{ python_executable }} -m pip install --user 'tox>={{ tox_min_version }},<{{tox_max_version}}'
+    {{ python_executable }} -m pip install --user
+    'tox>={{ tox_min_version }}{% if tox_max_version is not none %},<={{ tox_max_version }}{% endif %}'
   register: install_tox
   changed_when: "'Successfully installed' in install_tox.stdout"
 
